[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
blake3 = "1.3.1"
gtk = "0.15.5"
rand = "0.8.5"
rocket = "0.5.0-rc.2"
serde = "1.0.145"
serde_json = "1.0.85"
sqlite3 = "0.24.0"
